syntax = "proto3";

option csharp_namespace = "Protos";

message SystemMessage {
  oneof payload {
    LoginRequest login_request = 1;
    LoginResponse login_response = 2;
    Heartbeat heartbeat = 3;
  }
}

message LoginRequest {
  string user_name = 1;
}

message LoginResponse {
  bool success = 1;
  string user_name = 2;
  string message = 3;
}

message Heartbeat {
  int64 timestamp = 1;
}